fix: z-index on mobile

--- a/websystems.css
+++ b/websystems.css
@@ -40,7 +40,6 @@ body {
     margin: 0 auto;
     padding: 0 var(--navbar-padding);
     background: var(--background);
-    z-index: 2;
 }
 
 .navbar .exclamation {
@@ -78,7 +77,6 @@ body {
 
 .navbar nav {
     background: var(--background);
-    z-index: 1;
 }
 
 /* Mobile stuff */
@@ -102,9 +100,10 @@ body {
     transition: all 0.10s ease-out;
     position: absolute;
     left: 0;
-    top: -500%;
+    top: -100%;
     width: 100%;
     padding-bottom: calc(var(--navbar-padding) / 2);
+    z-index: -1;
 }
 
 .navbar nav ul li {
@@ -151,6 +150,7 @@ body {
         left: inherit;
         width: inherit;
         padding-bottom: inherit;
+        z-index: inherit;
     }
 
     .navbar nav ul {
